--- a/style.css
+++ b/style.css
@@ -1,199 +1,169 @@
 * {
   margin: 0px;
-  padding: 0px;
+  padding: 0%;
   box-sizing: border-box;
-}
-
-
-body {
+  font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
-  /* font-size: 16px; */
-}
-
-header {
-  padding: 1.2em;
-  font-size: 0.9em;
-  color: #909090;
-}
-
-#left_header {
-  float: left;
-}
-
-#right_header {
-  float: right;
-  position: relative;
-  top: -0.2em;
-}
-
-a {
   text-decoration: none;
 }
 
-li {
-  display: inline;
-  padding: 5px;
+.header {
+  padding: 15px 15px 0px 15px;
 }
 
-li:hover {
+.header__left {
+  float: left;
+  margin-top: 3px;
+}
+
+.header__right {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul li {
+  display: inline-block;
+}
+
+ul a {
+  color: black;
+  opacity: 0.8;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+ul a:hover {
   text-decoration: underline;
 }
 
-#Sing_In {
-  background-color: #4285f4;
-  color: white;
-  border-radius: 2px;
-  height: 30px;
-  width: 70px;
-  border: none;
-  font-weight: 600;
+.header__rigth--appicon {
   vertical-align: middle;
   cursor: pointer;
+  opacity: 0.7;
 }
 
-#Sing_In:hover {
-  background-color: #4285F4;
-  opacity: 0.9;
-}
-
-#appicon {
-  width: 1.8rem;
-  opacity: 0.5;
-  padding: 0.2rem;
-  vertical-align: middle;
-  /* Öğe, ana öğenin ortasına yerleştirilir */
-}
-
-#appicon:hover {
+.header__rigth--appicon:hover {
   opacity: 1;
-  cursor: pointer;
-  background-color: #EFF0F0;
-  border: 1px solid white;
-  border-radius: 1.8rem;
 }
 
-#logo {
-  width: 19rem;
-  height: 6.5rem;
-  display: block;
-  margin: 7rem auto 0;
-}
-
-#search {
-  width: 31.25em;
-  height: 2.5em;
-  border: 1px solid #d3d3d3;
-  border-radius: 1.56em;
-  margin: 1.6em auto 1em;
-}
-
-#search_input {
-  display: inline-block;
-  width: 420px;
-  height: 35px;
+.header__right--button {
+  background-color: #4285f4;
   border: none;
-  outline: none;
-  font-size: 15px;
-  margin-top: 1px;
+  width: 70px;
+  height: 30px;
+  border-radius: 2px;
+  cursor: pointer;
+  color: white;
+  font-weight: 700;
 }
 
-#magnifying {
+.header__right--button:hover {
+  box-shadow: rgba(0, 0, 0, 0.15)0px 1px 0px 0px;
+}
+
+.main__logo {
+  width: 272px;
+  height: 95px;
+  margin: 120px auto 0px;
+  display: block;
+  /* margin auto nun çalışması için */
+}
+
+.main__search-bar {
+  width: 460px;
+  height: 38px;
+  border: 1px solid #d3d3d3;
+  border-radius: 25px;
+  margin: 28px auto;
+}
+
+.main__search-bar:hover {
+  box-shadow: rgb(211, 211, 211)3px 3px 5px 0px;
+}
+
+.main__search-bar--magnifier {
   width: 30px;
   height: 30px;
   vertical-align: middle;
   margin-left: 10px;
-  border-radius: 10px;
-  background-color: #FDFBF7;
-  color: #FDFBF7;
 }
 
-#microphone {
+.main__search-bar--input {
+  width: 380px;
+  height: 28px;
+  border: none;
+  outline: none;
+  margin-top: 3px;
+  font-size: 16px;
+}
+
+.main__search-bar--microphone {
   width: 15px;
   height: 20px;
   vertical-align: middle;
+
 }
 
-#search:hover {
-  box-shadow: rgba(0, 0, 0, 0.2) 3px 3px 5px;
-}
-
-#buttons, #lang {
-  color: #5c5a5a;
-  margin-top: 10px;
+.main__buttons {
   text-align: center;
-  font-size: 15px;
 }
 
-
-#button_left {
-  width: 180px;
+.main__button--left,
+.main__button--right {
   height: 36px;
-  border: 1px solid white;
+  border: none;
+  background-color: #efefef;
   border-radius: 4px;
-  padding: 0 16px;
-  margin: 11px 4px;
-  background-color: #F8F9FA;
-  font-size: 15px;
+  padding: 1px 6px;
+  margin: 8px 4px;
 }
 
-#button_right {
-  width: 200px;
-  height: 36px;
-  border: 1px solid white;
-  border-radius: 4px;
-  padding: 0 20px;
-  margin: 11px 4px;
-  margin-left: 20px;
-  background-color: #F8F9FA;
-  font-size: 15px;
-}
-
-#english{
-  text-decoration: underline;
-}
-
-#english:hover{
-  text-decoration: none;
-}
-
-#button_left:hover {
+.main__button--left:hover,
+.main__button--right:hover {
+  border: 1px solid #d3d3d3;
   cursor: pointer;
-  border: 1px solid #e2dcdc;
 }
 
-#button_right:hover {
-  cursor: pointer;
-  border: 1px solid #e2dcdc;
+.main__language {
+  text-align: center;
+  margin: 20px 0px 13px;
 }
 
-footer {
-  background-color: #F2F2F2;
-  width: 100vw;
-  height: 13vh;
-  line-height: 40px;
+.main__language a {
+  color: #000080;
+}
+
+/* footer */
+
+.footer {
   position: fixed;
-  bottom: 0;
-  font-size: 1em;
-  opacity: 0.5;
-  text-decoration-color: rgba(211, 211, 211, 0.568);
+  bottom: 0px;
+  background-color: #f2f2f2;
+  line-height: 40px;
+  width: 100%;
+  color: #5f6368;
 }
 
-#country {
-  height: 7vh;
-  padding-top: 0.3em;
-  padding-left: 1.5em;
+.footer__country {
+  padding-left: 20px;
 }
 
-#bottom {
-  border: 1px solid #d2d4d8;
+.footer__bottom {
+  border-top: 1px solid #e4e4e4;
 }
 
-#bottom_right {
-  float: right;
-  padding-right: 1em;
-}
-
-#bottom_left {
+.footer__bottom--left {
   float: left;
-  padding-left: 1em;
+  padding-left: 10px;
+}
+
+.footer__bottom--right {
+  float: right;
 }
